# week03/app.js
@@ -1,5 +1,8 @@
 const express = require('express');
 const dotenv = require('dotenv');
+const session = require('express-session');
+const passport = require('passport');
+const { ensureAuth } = require('./middleware/auth');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger-output.json'); // Import the auto-generated file
 const connectDB = require('./config/db');
@@ -7,15 +10,61 @@ const connectDB = require('./config/db');
 dotenv.config();
 connectDB();
 
+// Load Passport Configuration
+require('./config/passport');
+
 const app = express();
 
 // Middleware to parse JSON bodies
 app.use(express.json());
 
-// Serve the automatically generated documentation UI
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+// Express Session Middleware
+app.use(
+  session({
+    secret: process.env.SESSION_SECRET,
+    resave: false,
+    saveUninitialized: false
+  })
+);
+
+// Initialize Passport Session
+app.use(passport.initialize());
+app.use(passport.session());
+
+// Protect the absolute homepage route (/)
+app.get('/', ensureAuth, (req, res) => {
+  // If the user passes ensureAuth, they are successfully logged in
+  res.send(`
+        <h1>Welcome to the Campus Event Management API</h1>
+        
+        <a href="/api-docs">Go to Interactive Swagger API Documentation</a> | 
+        <a href="/auth/logout">Logout</a>
+    `); //<p>Logged in successfully as: <strong>${req.user.displayName || req.user.emails[0].value}</strong></p>
+});
+
+// Dynamically construct the callback URL based on the environment context
+const hostUrl = process.env.NODE_ENV === 'production' 
+  ? 'https://cse341-wd-1.onrender.com' 
+  : `http://localhost:${process.env.PORT || 8081}`;
+
+app.use(
+  '/api-docs',
+  swaggerUi.serve,
+  swaggerUi.setup(swaggerDocument, {
+    swaggerOptions: {
+      oauth2RedirectUrl: `${hostUrl}/auth/google/callback`,
+      initOAuth: {
+        clientId: process.env.GOOGLE_CLIENT_ID,
+        scopes: ['profile', 'email'],
+        appName: 'Campus Event API'
+      }
+    }
+  })
+);
+
 
 // Mount Routes
+app.use('/auth', require('./routes/authRoutes'));
 app.use('/api/venues', require('./routes/venueRoutes'));
 app.use('/api/events', require('./routes/eventRoutes'));
 
