# week03/routes/eventRoutes.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const router = express.Router();
+const { ensureAuth } = require('../middleware/auth');
 const {
   createEvent,
   getEvents,
@@ -8,9 +9,12 @@ const {
   deleteEvent
 } = require('../controllers/eventController');
 
-router.route('/').get(getEvents).post(createEvent);
+router.route('/').get(getEvents).post(ensureAuth, createEvent); // Protected!
 
-router.route('/:id').get(getEvent).put(updateEvent).delete(deleteEvent);
+router
+  .route('/:id')
+  .get(getEvent)
+  .put(ensureAuth, updateEvent) // Protected!
+  .delete(ensureAuth, deleteEvent); // Protected!
 
 module.exports = router;
-
