# week03/swagger-output.json
@@ -5,12 +5,74 @@
     "description": "This API documentation was automatically generated by scanning Express routes.",
     "version": "1.0.0"
   },
-  "host": "cse341-wd-1.onrender.com",
+  "host": "localhost:8081",
   "basePath": "/",
   "schemes": [
-    "http", "https"
+    "http"
   ],
+  "securityDefinitions": {
+    "googleOAuth": {
+      "type": "oauth2",
+      "flow": "accessCode",
+      "authorizationUrl": "https://google.com",
+      "tokenUrl": "http://localhost:8081/auth/google/callback",
+      "scopes": {
+        "profile": "Access your basic profile information",
+        "email": "Access your email address"
+      }
+    }
+  },
   "paths": {
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/auth/google": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "referer",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/google/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/venues/": {
       "get": {
         "tags": [
@@ -59,8 +121,19 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
-        }
+        },
+        "security": [
+          {
+            "googleOAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       }
     },
     "/api/events/": {
@@ -86,7 +159,7 @@
         "tags": [
           "Events"
         ],
-        "summary": "Create a new campus event with 8 fields",
+        "summary": "Create a new campus event",
         "description": "",
         "parameters": [
           {
@@ -106,10 +179,21 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "googleOAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       }
     },
     "/api/events/{id}": {
@@ -117,7 +201,6 @@
         "tags": [
           "Events"
         ],
-        "summary": "Fetch a specific event by ID",
         "description": "",
         "parameters": [
           {
@@ -169,13 +252,24 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "googleOAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -198,10 +292,21 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           }
-        }
+        },
+        "security": [
+          {
+            "googleOAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       }
     }
   },
@@ -254,14 +359,6 @@
         "hasProjector": {
           "type": "boolean",
           "example": true
-        },
-        "createdAt": {
-          "type": "string",
-          "example": "2026-09-26T17:00:00.000Z"
-        },
-        "updatedAt": {
-          "type": "string",
-          "example": "2026-09-26T17:00:00.000Z"
         }
       }
     },
